# Charge

./: Cargo.toml  README.md  dev.naktix.Charge.desktop  dev.naktix.Charge.metainfo.xml  install_charge.sh  uninstall_charge.sh
src/: main.rs
